[package]
name = "rocrate-consolidate"
version = "0.1.0"
edition = "2021"
description = "Consolidate RO-Crate hierarchies into a single metadata file"
license = "MIT OR Apache-2.0"

[lib]
name = "rocrate_consolidate"
path = "src/lib.rs"

[[bin]]
name = "rocrate-consolidate"
path = "src/bin/main.rs"

[dependencies]
rocraters = { git = "https://github.com/arunaengine/ro-crate-rs", branch = "feat/tui" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
url = "2.5"
